# core-ct

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  analysis.py  architecture.puml  core.py  pyproject.toml
.github/workflows/: build_docs.yaml  lint_and_test.yaml  pypi_publish.yaml  test.yaml  verify_merge.yaml  verify_version_number.yaml  verify_version_number_increment.yaml  verify_version_update.yaml
docs/: conf.py  index.md  index.rst  installation.md  requirements.txt
docs/modules/: core.md  index.md  slice.md  visualize.md
docs/pages/: modules.md
docs/pages/modules/: analysis.md  importers.md
examples/: visualization_demo.ipynb
src/: analysis.py  core.py  demo.ipynb  importers.py  test_dicom.py
src/core_ct/: __init__.py  analysis.py  core.py  importers.py  slice.py  visualize.py
src/tests/: test_dicom.py
tests/: DELETE_THIS.py  MOVE_THIS.py  test_analysis.py  test_core.py  test_dicom.py  test_import.py  test_importers.py  test_slice.py  test_visualize.py
tests/scans/PAT_4615_18L_0001/: PAT_4636_39L_0001_000507.dcm  PAT_4636_39L_0001_000508.dcm  PAT_4636_39L_0001_000509.dcm
tests/scans/PAT_4636_39L_0001/: PAT_4636_39L_0001_000500.dcm  PAT_4636_39L_0001_000501.dcm  PAT_4636_39L_0001_000502.dcm  PAT_4636_39L_0001_000503.dcm  PAT_4636_39L_0001_000504.dcm  PAT_4636_39L_0001_000505.dcm  PAT_4636_39L_0001_000506.dcm  PAT_4636_39L_0001_000510.dcm
