[tool.poetry]
name = "core-ct"
version = "1.1.0"
description = "A Python library to assist geologists with the analysis of rock core CT scans"
authors = [
    "Kira Hanson <khanson@mines.edu>",
    "Carla Ellefsen <cellefsen@mines.edu>",
    "Connor Sparks <csparks@mines.edu>",
    "Asa Sprow <arsprow@mines.edu>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pydicom = "^2.4.3"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
ipympl = "^0.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.292"
black = "^23.9.1"
pre-commit = "^3.4.0"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"
sphinx-wagtail-theme = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`) and pydocstyle (`D`)
select = ["E", "F", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
